--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <h2 class="text-2xl font-bold text-[#A0522D] mb-4 text-center">추천 여행 일정 비교</h2>
                     <p class="text-center text-[#8B4513] mb-6">두 분의 여행 스타일에 맞는 최적의 동선을 찾아보세요. 각 일정은 축구 경기, 도시 간 이동 효율성, 그리고 2월의 날씨를 고려하여 세심하게 구성되었습니다. 아래 버튼을 눌러 각 일정의 상세 내용을 확인할 수 있습니다.</p>
                     <div class="flex flex-wrap justify-center gap-3 mb-6">
-                        <button data-itinerary="1" class="plan-button active px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#1 스페인 중심</button>
-                        <button data-itinerary="2" class="plan-button px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#2 포르투갈 중심</button>
-                        <button data-itinerary="3" class="plan-button px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#3 축구 직관 최적화</button>
+                        <button data-itinerary="1" class="plan-button active px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#1 바르셀로나 IN</button>
+                        <button data-itinerary="2" class="plan-button px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#2 포르투 IN</button>
+                        <button data-itinerary="3" class="plan-button px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#3 마드리드 IN</button>
                     </div>
                     <div id="itinerary-details"></div>
                 </div>
@@ -130,8 +130,12 @@
             const data = {
                 itineraries: {
                     '1': {
-                        title: '일정 1: 바르셀로나 IN - 마드리드 - 리스본 - 포르투 OUT (스페인 중심)',
+                        title: '일정 1: 바르셀로나 IN - 마드리드 - 리스본 - 포르투 OUT',
                         description: '스페인 주요 도시를 먼저 경험하고 포르투갈로 이동하는 효율적인 경로입니다. 축구 경기 관람일을 유연하게 조절할 수 있는 장점이 있습니다.',
+                        highlights: [
+                             { text: 'FC 바르셀로나 홈 경기 관람: 여행 4일차 (2월 8일 또는 22일 예상)', dateNote: '출발일: 2월 5일 또는 19일경 (여행 1일차)' },
+                             { text: '레알 마드리드 홈 경기 관람: 여행 7일차 (2월 15일 또는 28일 예상)', dateNote: '출발일: 2월 9일 또는 22일경 (여행 1일차)' }
+                        ],
                         days: [
                             { day: '1-4', city: '바르셀로나', activities: 'Day 1: 인천 출발 후 바르셀로나(BCN) 도착, 숙소 체크인. 저녁에는 고딕 지구와 람블라스 거리 산책 및 타파스 투어.\nDay 2: 가우디 건축물 투어 (사그라다 파밀리아, 구엘 공원, 카사 바트요 내부 관람).\nDay 3: 피카소 미술관 방문, 바르셀로네타 해변에서 여유로운 시간, 저녁에는 츄러스와 초콜릿 맛보기.\nDay 4: 축구 경기 또는 몬주익 성 방문(일요일 무료 입장). 저녁에는 카바(스파클링 와인)와 함께 현지식 저녁 식사.' },
                             { day: '5-7', city: '마드리드', activities: 'Day 5: 바르셀로나에서 AVE 고속 열차로 마드리드 이동(약 3시간). 숙소 체크인 후 산 미구엘 시장에서 다양한 타파스 경험.\nDay 6: 프라도 미술관에서 스페인 거장들의 작품 감상(무료 입장 시간 활용). 마드리드 왕궁과 마요르 광장 둘러보기.\nDay 7: 레알 마드리드 홈 경기 직관 또는 근교 도시 톨레도/세고비아 당일치기 투어.' },
@@ -140,8 +144,11 @@
                         ]
                     },
                     '2': {
-                        title: '일정 2: 포르투 IN - 리스본 - 세비야 - 바르셀로나 OUT (포르투갈 중심)',
+                        title: '일정 2: 포르투 IN - 리스본 - 세비야 - 바르셀로나 OUT',
                         description: '포르투갈을 먼저 깊이 경험하고 스페인 남부를 거쳐 바르셀로나로 이동합니다. 2월 포르투의 날씨 변동성을 고려해 여행 초반에 방문하는 동선입니다.',
+                        highlights: [
+                             { text: 'FC 바르셀로나 홈 경기 관람: 여행 13일차 (2월 8일 또는 22일 예상)', dateNote: '출발일: 1월 27일 또는 2월 10일경 (여행 1일차)' }
+                        ],
                         days: [
                             { day: '1-3', city: '포르투', activities: 'Day 1: 인천 출발 후 포르투(OPO) 도착. 숙소 체크인 및 도루 강변의 낭만적인 분위기 만끽.\nDay 2: 렐루 서점과 상벤투역 방문. 오후에는 포트 와인 셀러 투어 및 시음.\nDay 3: 도루 밸리 와이너리 투어(전일) 또는 포즈(Foz) 지역 해변 산책.' },
                             { day: '4-7', city: '리스본', activities: 'Day 4: 포르투에서 기차로 리스본 이동. 숙소 체크인 후 28번 트램을 타고 시내 구석구석을 둘러보기.\nDay 5: 벨렘 지구 투어 및 원조 에그타르트 맛집 방문. 저녁에는 파두 공연 관람.\nDay 6: 근교 신트라 당일치기 (페나 성, 무어인의 성터).\nDay 7: 해양 수족관 방문 또는 알파마 지구 탐방 후 자유 시간.' },
@@ -152,19 +159,50 @@
                     '3': {
                         title: '일정 3: 마드리드 IN - 바르셀로나 - 포르투 - 리스본 OUT (축구 직관 최적화)',
                         description: '축구 경기 직관을 최우선으로 고려하여 마드리드와 바르셀로나의 홈 경기 일정을 중심으로 유연하게 계획할 수 있도록 구성된 동선입니다.',
+                        highlights: [
+                             { text: '레알 마드리드 홈 경기 관람: 여행 3일차 (2월 1일 또는 15일 예상)', dateNote: '출발일: 1월 30일 또는 2월 13일경 (여행 1일차)' },
+                             { text: 'FC 바르셀로나 홈 경기 관람: 여행 7일차 (2월 8일 또는 22일 예상)', dateNote: '출발일: 2월 2일 또는 16일경 (여행 1일차)' }
+                        ],
                         days: [
                             { day: '1-4', city: '마드리드', activities: 'Day 1: 인천 출발 후 마드리드(MAD) 도착. 숙소 체크인 및 레알 마드리드 홈구장 베르나베우 스타디움 투어.\nDay 2: 마드리드 카니발(2월 14-18일 해당 시) 또는 프라도 미술관(무료 입장 시간) 방문.\nDay 3: 레알 마드리드 홈 경기 직관. 경기 전후의 활기찬 분위기 만끽.\nDay 4: 마드리드 왕궁, 마요르 광장 등 시내 명소 탐방 및 기념품 쇼핑.' },
-                            { day: '5-8', city: '바르셀로나', activities: 'Day 5: 마드리드에서 바르셀로나로 AVE 고속 열차 이동. 숙소 체크인 후 FC 바르셀로나 홈구장 캄프 누 스타디움 투어.\nDay 6: 가우디 투어(사그라다 파밀리아, 구엘 공원). 저녁에는 스페인 정통 파에야 맛보기.\nDay 7: FC 바르셀로나 홈 경기 직관. 경기장 인근에서 현지 팬들과 함께 경기 분위기 즐기기.\nDay 8: 고딕 지구에서 중세 분위기를 느끼고, 바르셀로네타 해변에서 산책 후 휴식.' },
-                            { day: '9-11', city: '포르투', activities: 'Day 9: 바르셀로나에서 포르투로 비행기 이동(약 1시간 40분). 숙소 체크인 후 도루 강변을 거닐며 낭만적인 야경 감상.\nDay 10: 렐루 서점 방문 후 포트 와인 셀러 투어 및 시음.\nDay 11: 도루 밸리 와이너리 투어(전일) 또는 포르투의 미로 같은 골목길 탐방.' },
-                            { day: '12-14', city: '리스본', activities: 'Day 12: 포르투에서 기차로 리스본 이동. 숙소 체크인 후 코메르시우 광장과 알파마 지구 탐방.\nDay 13: 근교 신트라(Sintra) 당일치기 여행 (페나 성, 무어인의 성터).\nDay 14: 자유시간 및 기념품 쇼핑 후 리스본(LIS) 공항으로 이동하여 출국.' }
+                            { day: '5-8', city: '바르셀로나', activities: 'Day 5: 마드리드에서 바르셀로나로 AVE 고속 열차 이동. 숙소 체크인 후 FC 바르셀로나 홈구장 캄프 누 스타디움 투어.\nDay 6: 가우디 투어(사그라다 파밀리아, 구엘 공원 등) 및 빛 축제 관람(2월 7-9일 해당 시).\nDay 7: FC 바르셀로나 홈 경기 직관. 경기장 인근에서 현지 팬들과 함께 경기 분위기 즐기기.\nDay 8: 고딕 지구에서 중세 분위기를 느끼고, 바르셀로네타 해변에서 산책 후 휴식.' },
+                            { day: '9-11', city: '포르투', activities: 'Day 9: 바르셀로나에서 포르투로 비행기 이동(약 1시간 40분). 숙소 체크인 후 도루 강변을 거닐며 낭만적인 야경 감상.\nDay 10: 렐루 서점 방문 후 포트 와인 셀러 투어 및 시음.\nDay 11: 도루 밸리 와이너리 투어(전일).\nDay 12-14: 리스본 (3박)' },
+                            { day: '12', city: '포르투', activities: '포르투에서 기차로 리스본 이동. 숙소 체크인 후 코메르시우 광장 및 알파마 지구 탐방.\nDay 13: 제로니무스 수도원, 벨렘 탑, 신트라 당일치기.\nDay 14: 자유 시간 및 기념품 쇼핑, 리스본(LIS) 공항으로 이동 및 인천 출발.' }
                         ]
                     }
                 },
                 cities: [
-                    { name: '바르셀로나', icon: '🎨', sights: '사그라다 파밀리아, 구엘 공원, 고딕 지구, 바르셀로네타 해변. 2월에는 빛 축제, 산타 에우랄리아 축제가 열립니다.', food: '피데우아(해산물 파스타 파에야), 에스칼리바다(구운 채소 샐러드), 아로스 네그레(오징어 먹물밥), 츄러스, 카바(스파클링 와인).' },
-                    { name: '포르투', icon: '🍷', sights: '도루강변, 렐루 서점, 상벤투역, 동 루이스 1세 다리. 포트 와인 셀러 투어는 필수 코스입니다.', food: '포트 와인, 신선한 해산물 요리 (특히 대구 요리).' },
-                    { name: '마드리드', icon: '👑', sights: '마드리드 왕궁, 프라도 미술관, 마요르 광장, 레티로 공원. 2월에는 마드리드 카니발이 열립니다.', food: '코시도 마드리예노(전통 스튜), 다양한 타파스, 초콜릿과 츄러스.' },
-                    { name: '리스본', icon: '🚋', sights: '제로니무스 수도원, 코메르시우 광장, 신트라(근교), 파두 공연 감상. 아줄레주 타일 예술이 아름답습니다.', food: '파스텔 드 나타(에그타르트), 신선한 해산물 요리.' }
+                    { name: '바르셀로나', icon: '🎨', sights: [
+                        { name: '사그라다 파밀리아', desc: '가우디의 미완성 걸작으로, 웅장한 규모와 섬세한 건축미를 자랑합니다.' },
+                        { name: '구엘 공원', desc: '가우디의 상상력이 담긴 독특한 조형물과 모자이크를 감상할 수 있는 공원입니다.' },
+                        { name: '고딕 지구', desc: '좁은 골목과 숨겨진 광장을 따라 중세 시대의 분위기를 느낄 수 있는 구시가지입니다.' },
+                        { name: '바르셀로네타 해변', desc: '지중해의 활기찬 분위기와 여유를 즐길 수 있는 해변입니다.' },
+                        { name: '피카소 미술관', desc: '천재 화가 피카소의 초기 작품부터 다양한 시기별 작품을 만날 수 있는 곳입니다.' },
+                        { name: '빛 축제(Llum BCN)', desc: '2월 7~9일에 열리며, 포블레노우 지역에서 다양한 조명 예술 작품을 볼 수 있습니다.' },
+                        { name: '산타 에우랄리아 축제', desc: '2월 11~16일에 열리는 카탈루냐 전통 축제로, 다양한 문화 행사를 즐길 수 있습니다.' }
+                    ], food: '피데우아(해산물 파스타 파에야), 에스칼리바다(구운 채소 샐러드), 아로스 네그레(오징어 먹물밥), 츄러스, 카바(스파클링 와인).' },
+                    { name: '포르투', icon: '🍷', sights: [
+                        { name: '도루강변', desc: '낭만적인 분위기 속에서 포트 와인 한 잔을 즐기기 좋은 곳입니다.' },
+                        { name: '렐루 서점', desc: '해리포터 작가에게 영감을 주었다고 알려진 아름다운 서점입니다.' },
+                        { name: '상벤투역', desc: '내부 벽면을 장식한 화려한 아줄레주(타일) 예술이 인상적인 역입니다.' },
+                        { name: '동 루이스 1세 다리', desc: '도루강을 가로지르는 아름다운 다리로, 포르투의 상징 중 하나입니다.' },
+                        { name: '포트 와인 셀러 투어', desc: '포트 와인의 제조 과정을 배우고 직접 시음해볼 수 있는 필수 코스입니다.' },
+                        { name: '도루 밸리 와이너리 투어', desc: '와인밭이 펼쳐진 아름다운 도루 계곡에서 와인과 풍경을 함께 즐길 수 있습니다.' }
+                    ], food: '포트 와인, 신선한 해산물 요리 (특히 대구 요리).' },
+                    { name: '마드리드', icon: '👑', sights: [
+                        { name: '마드리드 왕궁', desc: '스페인 왕실의 화려한 역사를 느낄 수 있는 웅장한 건축물입니다.' },
+                        { name: '프라도 미술관', desc: '벨라스케스, 고야 등 스페인 거장들의 작품을 만날 수 있는 세계적인 미술관입니다.' },
+                        { name: '마요르 광장', desc: '스페인 사람들의 활기찬 삶과 에너지를 느낄 수 있는 역사적인 중심 광장입니다.' },
+                        { name: '레티로 공원', desc: '도심 속에서 여유롭게 산책하거나 휴식하기 좋은 넓은 공원입니다.' },
+                        { name: '마드리드 카니발', desc: '2월 14~18일에 열리며, 정열적인 축제 분위기를 만끽할 수 있습니다.' }
+                    ], food: '코시도 마드리예노(전통 스튜), 다양한 타파스, 초콜릿과 츄러스.' },
+                    { name: '리스본', icon: '🚋', sights: [
+                        { name: '제로니무스 수도원', desc: '대항해 시대를 상징하는 아름다운 건축물로, 포르투갈 마누엘린 양식의 걸작입니다.' },
+                        { name: '코메르시우 광장', desc: '대서양을 향해 열려 있는 거대한 광장으로, 리스본의 상징적인 장소입니다.' },
+                        { name: '신트라', desc: '동화 같은 분위기의 페나 성과 무어인의 성터가 있는 근교 도시입니다.' },
+                        { name: '파두 공연', desc: '포르투갈의 정서가 담긴 전통 음악인 파두를 감상할 수 있습니다.' },
+                        { name: '아줄레주 박물관', desc: '포르투갈의 독특한 타일 예술인 아줄레주의 역사와 작품을 볼 수 있는 곳입니다.' }
+                    ], food: '파스텔 드 나타(에그타르트), 신선한 해산물 요리.' }
                 ],
                 info: {
                     weather: {
@@ -220,7 +258,13 @@
                 let html = `<div class="p-4 rounded-lg bg-[#F5F5DC]/50">
                                 <h3 class="text-xl font-bold text-center text-[#A0522D] mb-2">${itinerary.title}</h3>
                                 <p class="text-center text-[#8B4513] mb-6">${itinerary.description}</p>
-                                <div class="space-y-4">`;
+                                <div class="mb-6 space-y-2 p-4 bg-white rounded-lg shadow-sm">
+                                    <h4 class="font-bold text-lg text-[#A0522D]">⭐ 핵심 일정 (축구 경기)</h4>`;
+                itinerary.highlights.forEach(highlight => {
+                     html += `<p class="text-md text-gray-700">✔️ ${highlight.text}</p>`;
+                     html += `<p class="text-sm italic text-[#8B4513] ml-6">${highlight.dateNote}</p>`;
+                });
+                html += `</div><div class="space-y-4">`;
                 itinerary.days.forEach(item => {
                     const activitiesList = item.activities.split('\n').map(activity => `<li class="text-sm text-gray-700">${activity.trim()}</li>`).join('');
                     html += `
@@ -253,7 +297,9 @@
                             </button>
                             <div x-show="open" x-cloak x-transition class="p-4 border-t border-gray-200">
                                 <h4 class="font-semibold text-md text-[#A0522D] mb-2">🏞️ 풍경과 경험</h4>
-                                <p class="mb-4 text-sm text-gray-700">${city.sights}</p>
+                                <ul class="list-disc list-inside space-y-2 text-gray-700 mb-4">
+                                    ${city.sights.map(item => `<li><strong>${item.name}</strong>: ${item.desc}</li>`).join('')}
+                                </ul>
                                 <h4 class="font-semibold text-md text-[#A0522D] mb-2">🍲 대표 음식</h4>
                                 <p class="text-sm text-gray-700">${city.food}</p>
                             </div>
