--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         <button data-itinerary="1" class="plan-button active px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#1 바르셀로나 IN</button>
                         <button data-itinerary="2" class="plan-button px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#2 포르투 IN</button>
                         <button data-itinerary="3" class="plan-button px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#3 마드리드 IN</button>
+                        <button data-itinerary="4" class="plan-button px-5 py-2 bg-[#F5DEB3] text-[#8B4513] font-medium rounded-md hover:bg-[#CD853F] hover:text-white transition-colors">#4 바르셀로나 IN (남부)</button>
                     </div>
                     <div id="itinerary-details"></div>
                 </div>
@@ -202,7 +203,19 @@
                         { name: '신트라', desc: '동화 같은 분위기의 페나 성과 무어인의 성터가 있는 근교 도시입니다.' },
                         { name: '파두 공연', desc: '포르투갈의 정서가 담긴 전통 음악인 파두를 감상할 수 있습니다.' },
                         { name: '아줄레주 박물관', desc: '포르투갈의 독특한 타일 예술인 아줄레주의 역사와 작품을 볼 수 있는 곳입니다.' }
-                    ], food: '파스텔 드 나타(에그타르트), 신선한 해산물 요리.' }
+                    ], food: '파스텔 드 나타(에그타르트), 신선한 해산물 요리.' },
+                    { name: '그라나다', icon: '🕌', sights: [
+                        { name: '알함브라 궁전', desc: '이슬람 건축의 정수를 보여주는 유네스코 세계문화유산으로, 나스르 궁전, 헤네랄리페 정원 등으로 이루어져 있습니다.' },
+                        { name: '알바이신 지구', desc: '그라나다의 구시가지로, 좁은 골목길을 거닐며 아랍 문화의 흔적을 느낄 수 있습니다.' },
+                        { name: '산 니콜라스 전망대', desc: '알함브라 궁전과 시에라 네바다 산맥의 멋진 전경을 감상할 수 있는 최고의 장소입니다.' },
+                        { name: '그라나다 대성당', desc: '고딕과 르네상스 양식이 혼합된 웅장한 대성당으로, 스페인 역사에서 중요한 의미를 갖습니다.' }
+                    ], food: '살모레호(차가운 토마토 수프), 레차소(어린 양고기 요리), 타파스.' },
+                    { name: '세비야', icon: '💃', sights: [
+                        { name: '세비야 대성당', desc: '세계에서 가장 큰 고딕 양식의 대성당이자, 콜럼버스의 묘가 있는 곳으로 유명합니다.' },
+                        { name: '알카사르', desc: '이슬람과 스페인 건축 양식이 결합된 왕궁으로, 아름다운 정원이 인상적입니다.' },
+                        { name: '스페인 광장', desc: '웅장한 규모와 독특한 건축 양식으로 유명하며, 영화 촬영지로도 사용되었습니다.' },
+                        { name: '플라멩코 공연', desc: '스페인의 정열적인 문화와 예술을 직접 느낄 수 있는 공연입니다.' }
+                    ], food: '하몽 이베리코(이베리아 햄), 페스카이토 프리토(튀김 생선), 오렌지 와인.' }
                 ],
                 info: {
                     weather: {
@@ -251,6 +264,21 @@
                         `
                     }
                 }
+            };
+            
+            data.itineraries['4'] = {
+                title: '일정 4: 바르셀로나 IN - 그라나다 - 세비야 - 리스본 - 포르투 OUT',
+                description: '축구 경기 관람을 시작으로, 스페인 남부의 이슬람 문화와 플라멩코의 정열을 경험한 후 포르투갈로 넘어가는 동선입니다. 2월의 따뜻한 날씨를 만끽할 수 있습니다.',
+                highlights: [
+                    { text: 'FC 바르셀로나 홈 경기 관람: 여행 4일차 (2월 8일 고정)', dateNote: '출발일: 2월 5일경 (여행 1일차)' }
+                ],
+                days: [
+                    { day: '1-4', city: '바르셀로나', activities: 'Day 1: 인천 출발 후 바르셀로나(BCN) 도착, 숙소 체크인 및 고딕 지구 산책.\nDay 2: 가우디 투어(사그라다 파밀리아, 구엘 공원). 저녁에는 현지 미식 즐기기.\nDay 3: 피카소 미술관 방문, 바르셀로네타 해변에서 휴식.\nDay 4: FC 바르셀로나 홈 경기 직관! 경기 후 활기찬 분위기 만끽.' },
+                    { day: '5-6', city: '그라나다', activities: 'Day 5: 바르셀로나에서 그라나다로 비행기 이동(약 1시간 20분), 숙소 체크인. 오후에 알바이신 지구 탐방 및 산 니콜라스 전망대에서 야경 감상.\nDay 6: 알함브라 궁전 투어(오전). 그라나다 대성당 방문 후 타파스 투어.' },
+                    { day: '7-9', city: '세비야', activities: 'Day 7: 그라나다에서 세비야로 이동(버스/기차, 약 3시간). 숙소 체크인 후 스페인 광장 방문.\nDay 8: 세비야 대성당 및 알카사르 투어. 저녁에는 정통 플라멩코 공연 관람.\nDay 9: 자유시간, 소품 쇼핑 후 리스본으로 이동 준비.' },
+                    { day: '10-12', city: '리스본', activities: 'Day 10: 세비야에서 리스본으로 비행기/버스 이동(비행기 약 1시간, 버스 약 7시간). 숙소 체크인 후 벨렘 지구 투어.\nDay 11: 28번 트램을 타고 알파마 지구 탐방. 코메르시우 광장에서 여유로운 시간.\nDay 12: 근교 신트라(Sintra) 당일치기 여행.' },
+                    { day: '13-14', city: '포르투', activities: 'Day 13: 리스본에서 포르투로 기차 이동(약 3시간). 숙소 체크인 후 도루 강변 산책 및 포트 와인 시음.\nDay 14: 렐루 서점, 상벤투역 방문 후 자유시간 및 기념품 쇼핑. 포르투(OPO) 공항으로 이동하여 출국.' }
+                ]
             };
             
             function renderItinerary(id) {
