--- a/index.html
+++ b/index.html
@@ -131,49 +131,49 @@
             const data = {
                 itineraries: {
                     '1': {
-                        title: '일정 1: 바르셀로나 IN - 마드리드 - 리스본 - 포르투 OUT',
+                        title: '일정 1: 바르셀로나(스페인) IN - 마드리드(스페인) - 리스본(포르투갈) - 포르투(포르투갈) OUT',
                         description: '스페인 주요 도시를 먼저 경험하고 포르투갈로 이동하는 효율적인 경로입니다. 축구 경기 관람일을 유연하게 조절할 수 있는 장점이 있습니다.',
                         highlights: [
                              { text: 'FC 바르셀로나 홈 경기 관람: 여행 4일차 (2월 8일 또는 22일 예상)', dateNote: '출발일: 2월 5일 또는 19일경 (여행 1일차)' },
                              { text: '레알 마드리드 홈 경기 관람: 여행 7일차 (2월 15일 또는 28일 예상)', dateNote: '출발일: 2월 9일 또는 22일경 (여행 1일차)' }
                         ],
                         days: [
-                            { day: '1-4', city: '바르셀로나', activities: 'Day 1: 인천 출발 후 바르셀로나(BCN) 도착, 숙소 체크인. 저녁에는 고딕 지구와 람블라스 거리 산책 및 타파스 투어.\nDay 2: 가우디 건축물 투어 (사그라다 파밀리아, 구엘 공원, 카사 바트요 내부 관람).\nDay 3: 피카소 미술관 방문, 바르셀로네타 해변에서 여유로운 시간, 저녁에는 츄러스와 초콜릿 맛보기.\nDay 4: 축구 경기 또는 몬주익 성 방문(일요일 무료 입장). 저녁에는 카바(스파클링 와인)와 함께 현지식 저녁 식사.' },
-                            { day: '5-7', city: '마드리드', activities: 'Day 5: 바르셀로나에서 AVE 고속 열차로 마드리드 이동(약 3시간). 숙소 체크인 후 산 미구엘 시장에서 다양한 타파스 경험.\nDay 6: 프라도 미술관에서 스페인 거장들의 작품 감상(무료 입장 시간 활용). 마드리드 왕궁과 마요르 광장 둘러보기.\nDay 7: 레알 마드리드 홈 경기 직관 또는 근교 도시 톨레도/세고비아 당일치기 투어.' },
-                            { day: '8-11', city: '리스본', activities: 'Day 8: 마드리드에서 리스본으로 비행기 이동(약 1시간 15분). 숙소 체크인 후 28번 트램을 타고 알파마 지구 탐방.\nDay 9: 벨렘 지구 투어 (제로니무스 수도원, 벨렘 탑) 및 원조 에그타르트 맛집 방문.\nDay 10: 근교 신트라(Sintra) 당일치기 여행 (페나 성, 무어인의 성터).\nDay 11: 코메르시우 광장 산책 및 파두 공연 관람.' },
-                            { day: '12-14', city: '포르투', activities: 'Day 12: 리스본에서 포르투로 기차 이동(약 3시간). 숙소 체크인 후 도루 강변 산책 및 동 루이스 1세 다리 건너기.\nDay 13: 렐루 서점 방문, 상벤투역의 아줄레주 장식 감상. 오후에는 포트 와인 셀러 투어 및 시음.\nDay 14: 자유시간 및 기념품 쇼핑 후 포르투(OPO) 공항으로 이동하여 출국.' }
+                            { day: '1-4', city: '바르셀로나(스페인)', activities: 'Day 1: 인천 출발 후 바르셀로나(BCN) 도착, 숙소 체크인. 저녁에는 고딕 지구와 람블라스 거리 산책 및 타파스 투어.\nDay 2: 가우디 건축물 투어 (사그라다 파밀리아, 구엘 공원, 카사 바트요 내부 관람).\nDay 3: 피카소 미술관 방문, 바르셀로네타 해변에서 여유로운 시간, 저녁에는 츄러스와 초콜릿 맛보기.\nDay 4: 축구 경기 또는 몬주익 성 방문(일요일 무료 입장). 저녁에는 카바(스파클링 와인)와 함께 현지식 저녁 식사.' },
+                            { day: '5-7', city: '마드리드(스페인)', activities: 'Day 5: 바르셀로나에서 AVE 고속 열차로 마드리드 이동(약 3시간). 숙소 체크인 후 산 미구엘 시장에서 다양한 타파스 경험.\nDay 6: 프라도 미술관에서 스페인 거장들의 작품 감상(무료 입장 시간 활용). 마드리드 왕궁과 마요르 광장 둘러보기.\nDay 7: 레알 마드리드 홈 경기 직관 또는 근교 도시 톨레도/세고비아 당일치기 투어.' },
+                            { day: '8-11', city: '리스본(포르투갈)', activities: 'Day 8: 마드리드에서 리스본으로 비행기 이동(약 1시간 15분). 숙소 체크인 후 28번 트램을 타고 알파마 지구 탐방.\nDay 9: 벨렘 지구 투어 (제로니무스 수도원, 벨렘 탑) 및 원조 에그타르트 맛집 방문.\nDay 10: 근교 신트라(Sintra) 당일치기 여행 (페나 성, 무어인의 성터).\nDay 11: 코메르시우 광장 산책 및 파두 공연 관람.' },
+                            { day: '12-14', city: '포르투(포르투갈)', activities: 'Day 12: 리스본에서 포르투로 기차 이동(약 3시간). 숙소 체크인 후 도루 강변 산책 및 동 루이스 1세 다리 건너기.\nDay 13: 렐루 서점 방문, 상벤투역의 아줄레주 장식 감상. 오후에는 포트 와인 셀러 투어 및 시음.\nDay 14: 자유시간 및 기념품 쇼핑 후 포르투(OPO) 공항으로 이동하여 출국.' }
                         ]
                     },
                     '2': {
-                        title: '일정 2: 포르투 IN - 리스본 - 세비야 - 바르셀로나 OUT',
+                        title: '일정 2: 포르투(포르투갈) IN - 리스본(포르투갈) - 세비야(스페인) - 바르셀로나(스페인) OUT',
                         description: '포르투갈을 먼저 깊이 경험하고 스페인 남부를 거쳐 바르셀로나로 이동합니다. 2월 포르투의 날씨 변동성을 고려해 여행 초반에 방문하는 동선입니다.',
                         highlights: [
                              { text: 'FC 바르셀로나 홈 경기 관람: 여행 13일차 (2월 8일 또는 22일 예상)', dateNote: '출발일: 1월 27일 또는 2월 10일경 (여행 1일차)' }
                         ],
                         days: [
-                            { day: '1-3', city: '포르투', activities: 'Day 1: 인천 출발 후 포르투(OPO) 도착. 숙소 체크인 및 도루 강변의 낭만적인 분위기 만끽.\nDay 2: 렐루 서점과 상벤투역 방문. 오후에는 포트 와인 셀러 투어 및 시음.\nDay 3: 도루 밸리 와이너리 투어(전일) 또는 포즈(Foz) 지역 해변 산책.' },
-                            { day: '4-7', city: '리스본', activities: 'Day 4: 포르투에서 기차로 리스본 이동. 숙소 체크인 후 28번 트램을 타고 시내 구석구석을 둘러보기.\nDay 5: 벨렘 지구 투어 및 원조 에그타르트 맛집 방문. 저녁에는 파두 공연 관람.\nDay 6: 근교 신트라 당일치기 (페나 성, 무어인의 성터).\nDay 7: 해양 수족관 방문 또는 알파마 지구 탐방 후 자유 시간.' },
-                            { day: '8-10', city: '세비야/그라나다', activities: 'Day 8: 리스본에서 세비야/그라나다로 버스/비행기 이동. 숙소 체크인 후 각 도시의 상징적인 건축물(세비야 대성당, 알함브라 궁전) 방문.\nDay 9: 세비야에서 정통 플라멩코 공연 관람 및 타파스 투어 또는 그라나다 알바이신 지구 탐방.\nDay 10: 자유 시간 및 다음 도시로의 이동 준비.' },
-                            { day: '11-14', city: '바르셀로나', activities: 'Day 11: 스페인 남부에서 바르셀로나로 기차/비행기 이동. 숙소 체크인 및 고딕 지구 산책.\nDay 12: 가우디 투어(사그라다 파밀리아, 구엘 공원 등) 및 빛 축제 관람(2월 7-9일 해당 시).\nDay 13: FC 바르셀로나 홈 경기 직관 또는 바르셀로네타 해변과 피카소 미술관 방문.\nDay 14: 자유 시간 후 바르셀로나(BCN) 공항으로 이동하여 출국.' }
+                            { day: '1-3', city: '포르투(포르투갈)', activities: 'Day 1: 인천 출발 후 포르투(OPO) 도착. 숙소 체크인 및 도루 강변의 낭만적인 분위기 만끽.\nDay 2: 렐루 서점과 상벤투역 방문. 오후에는 포트 와인 셀러 투어 및 시음.\nDay 3: 도루 밸리 와이너리 투어(전일) 또는 포즈(Foz) 지역 해변 산책.' },
+                            { day: '4-7', city: '리스본(포르투갈)', activities: 'Day 4: 포르투에서 기차로 리스본 이동. 숙소 체크인 후 28번 트램을 타고 시내 구석구석을 둘러보기.\nDay 5: 벨렘 지구 투어 및 원조 에그타르트 맛집 방문. 저녁에는 파두 공연 관람.\nDay 6: 근교 신트라 당일치기 (페나 성, 무어인의 성터).\nDay 7: 해양 수족관 방문 또는 알파마 지구 탐방 후 자유 시간.' },
+                            { day: '8-10', city: '세비야(스페인)/그라나다(스페인)', activities: 'Day 8: 리스본에서 세비야/그라나다로 버스/비행기 이동. 숙소 체크인 후 각 도시의 상징적인 건축물(세비야 대성당, 알함브라 궁전) 방문.\nDay 9: 세비야에서 정통 플라멩코 공연 관람 및 타파스 투어 또는 그라나다 알바이신 지구 탐방.\nDay 10: 자유 시간 및 다음 도시로의 이동 준비.' },
+                            { day: '11-14', city: '바르셀로나(스페인)', activities: 'Day 11: 스페인 남부에서 바르셀로나로 기차/비행기 이동. 숙소 체크인 및 고딕 지구 산책.\nDay 12: 가우디 투어(사그라다 파밀리아, 구엘 공원 등) 및 빛 축제 관람(2월 7-9일 해당 시).\nDay 13: FC 바르셀로나 홈 경기 직관 또는 바르셀로네타 해변과 피카소 미술관 방문.\nDay 14: 자유 시간 후 바르셀로나(BCN) 공항으로 이동하여 출국.' }
                         ]
                     },
                     '3': {
-                        title: '일정 3: 마드리드 IN - 바르셀로나 - 포르투 - 리스본 OUT (축구 직관 최적화)',
+                        title: '일정 3: 마드리드(스페인) IN - 바르셀로나(스페인) - 포르투(포르투갈) - 리스본(포르투갈) OUT (축구 직관 최적화)',
                         description: '축구 경기 직관을 최우선으로 고려하여 마드리드와 바르셀로나의 홈 경기 일정을 중심으로 유연하게 계획할 수 있도록 구성된 동선입니다.',
                         highlights: [
                              { text: '레알 마드리드 홈 경기 관람: 여행 3일차 (2월 1일 또는 15일 예상)', dateNote: '출발일: 1월 30일 또는 2월 13일경 (여행 1일차)' },
                              { text: 'FC 바르셀로나 홈 경기 관람: 여행 7일차 (2월 8일 또는 22일 예상)', dateNote: '출발일: 2월 2일 또는 16일경 (여행 1일차)' }
                         ],
                         days: [
-                            { day: '1-4', city: '마드리드', activities: 'Day 1: 인천 출발 후 마드리드(MAD) 도착. 숙소 체크인 및 레알 마드리드 홈구장 베르나베우 스타디움 투어.\nDay 2: 마드리드 카니발(2월 14-18일 해당 시) 또는 프라도 미술관(무료 입장 시간) 방문.\nDay 3: 레알 마드리드 홈 경기 직관. 경기 전후의 활기찬 분위기 만끽.\nDay 4: 마드리드 왕궁, 마요르 광장 등 시내 명소 탐방 및 기념품 쇼핑.' },
-                            { day: '5-8', city: '바르셀로나', activities: 'Day 5: 마드리드에서 바르셀로나로 AVE 고속 열차 이동. 숙소 체크인 후 FC 바르셀로나 홈구장 캄프 누 스타디움 투어.\nDay 6: 가우디 투어(사그라다 파밀리아, 구엘 공원 등) 및 빛 축제 관람(2월 7-9일 해당 시).\nDay 7: FC 바르셀로나 홈 경기 직관. 경기장 인근에서 현지 팬들과 함께 경기 분위기 즐기기.\nDay 8: 고딕 지구에서 중세 분위기를 느끼고, 바르셀로네타 해변에서 산책 후 휴식.' },
-                            { day: '9-11', city: '포르투', activities: 'Day 9: 바르셀로나에서 포르투로 비행기 이동(약 1시간 40분). 숙소 체크인 후 도루 강변을 거닐며 낭만적인 야경 감상.\nDay 10: 렐루 서점 방문 후 포트 와인 셀러 투어 및 시음.\nDay 11: 도루 밸리 와이너리 투어(전일).\nDay 12-14: 리스본 (3박)' },
-                            { day: '12', city: '포르투', activities: '포르투에서 기차로 리스본 이동. 숙소 체크인 후 코메르시우 광장 및 알파마 지구 탐방.\nDay 13: 제로니무스 수도원, 벨렘 탑, 신트라 당일치기.\nDay 14: 자유 시간 및 기념품 쇼핑, 리스본(LIS) 공항으로 이동 및 인천 출발.' }
+                            { day: '1-4', city: '마드리드(스페인)', activities: 'Day 1: 인천 출발 후 마드리드(MAD) 도착. 숙소 체크인 및 레알 마드리드 홈구장 베르나베우 스타디움 투어.\nDay 2: 마드리드 카니발(2월 14-18일 해당 시) 또는 프라도 미술관(무료 입장 시간) 방문.\nDay 3: 레알 마드리드 홈 경기 직관. 경기 전후의 활기찬 분위기 만끽.\nDay 4: 마드리드 왕궁, 마요르 광장 등 시내 명소 탐방 및 기념품 쇼핑.' },
+                            { day: '5-8', city: '바르셀로나(스페인)', activities: 'Day 5: 마드리드에서 바르셀로나로 AVE 고속 열차 이동. 숙소 체크인 후 FC 바르셀로나 홈구장 캄프 누 스타디움 투어.\nDay 6: 가우디 투어(사그라다 파밀리아, 구엘 공원 등) 및 빛 축제 관람(2월 7-9일 해당 시).\nDay 7: FC 바르셀로나 홈 경기 직관. 경기장 인근에서 현지 팬들과 함께 경기 분위기 즐기기.\nDay 8: 고딕 지구에서 중세 분위기를 느끼고, 바르셀로네타 해변에서 산책 후 휴식.' },
+                            { day: '9-11', city: '포르투(포르투갈)', activities: 'Day 9: 바르셀로나에서 포르투로 비행기 이동(약 1시간 40분). 숙소 체크인 후 도루 강변을 거닐며 낭만적인 야경 감상.\nDay 10: 렐루 서점 방문 후 포트 와인 셀러 투어 및 시음.\nDay 11: 도루 밸리 와이너리 투어(전일).\nDay 12-14: 리스본 (3박)' },
+                            { day: '12', city: '포르투(포르투갈)', activities: '포르투에서 기차로 리스본 이동. 숙소 체크인 후 코메르시우 광장 및 알파마 지구 탐방.\nDay 13: 제로니무스 수도원, 벨렘 탑, 신트라 당일치기.\nDay 14: 자유 시간 및 기념품 쇼핑, 리스본(LIS) 공항으로 이동 및 인천 출발.' }
                         ]
                     }
                 },
                 cities: [
-                    { name: '바르셀로나', icon: '🎨', sights: [
+                    { name: '바르셀로나(스페인)', icon: '🎨', sights: [
                         { name: '사그라다 파밀리아', desc: '가우디의 미완성 걸작으로, 웅장한 규모와 섬세한 건축미를 자랑합니다.' },
                         { name: '구엘 공원', desc: '가우디의 상상력이 담긴 독특한 조형물과 모자이크를 감상할 수 있는 공원입니다.' },
                         { name: '고딕 지구', desc: '좁은 골목과 숨겨진 광장을 따라 중세 시대의 분위기를 느낄 수 있는 구시가지입니다.' },
@@ -182,7 +182,7 @@
                         { name: '빛 축제(Llum BCN)', desc: '2월 7~9일에 열리며, 포블레노우 지역에서 다양한 조명 예술 작품을 볼 수 있습니다.' },
                         { name: '산타 에우랄리아 축제', desc: '2월 11~16일에 열리는 카탈루냐 전통 축제로, 다양한 문화 행사를 즐길 수 있습니다.' }
                     ], food: '피데우아(해산물 파스타 파에야), 에스칼리바다(구운 채소 샐러드), 아로스 네그레(오징어 먹물밥), 츄러스, 카바(스파클링 와인).' },
-                    { name: '포르투', icon: '🍷', sights: [
+                    { name: '포르투(포르투갈)', icon: '🍷', sights: [
                         { name: '도루강변', desc: '낭만적인 분위기 속에서 포트 와인 한 잔을 즐기기 좋은 곳입니다.' },
                         { name: '렐루 서점', desc: '해리포터 작가에게 영감을 주었다고 알려진 아름다운 서점입니다.' },
                         { name: '상벤투역', desc: '내부 벽면을 장식한 화려한 아줄레주(타일) 예술이 인상적인 역입니다.' },
@@ -190,27 +190,27 @@
                         { name: '포트 와인 셀러 투어', desc: '포트 와인의 제조 과정을 배우고 직접 시음해볼 수 있는 필수 코스입니다.' },
                         { name: '도루 밸리 와이너리 투어', desc: '와인밭이 펼쳐진 아름다운 도루 계곡에서 와인과 풍경을 함께 즐길 수 있습니다.' }
                     ], food: '포트 와인, 신선한 해산물 요리 (특히 대구 요리).' },
-                    { name: '마드리드', icon: '👑', sights: [
+                    { name: '마드리드(스페인)', icon: '👑', sights: [
                         { name: '마드리드 왕궁', desc: '스페인 왕실의 화려한 역사를 느낄 수 있는 웅장한 건축물입니다.' },
                         { name: '프라도 미술관', desc: '벨라스케스, 고야 등 스페인 거장들의 작품을 만날 수 있는 세계적인 미술관입니다.' },
                         { name: '마요르 광장', desc: '스페인 사람들의 활기찬 삶과 에너지를 느낄 수 있는 역사적인 중심 광장입니다.' },
                         { name: '레티로 공원', desc: '도심 속에서 여유롭게 산책하거나 휴식하기 좋은 넓은 공원입니다.' },
                         { name: '마드리드 카니발', desc: '2월 14~18일에 열리며, 정열적인 축제 분위기를 만끽할 수 있습니다.' }
                     ], food: '코시도 마드리예노(전통 스튜), 다양한 타파스, 초콜릿과 츄러스.' },
-                    { name: '리스본', icon: '🚋', sights: [
+                    { name: '리스본(포르투갈)', icon: '🚋', sights: [
                         { name: '제로니무스 수도원', desc: '대항해 시대를 상징하는 아름다운 건축물로, 포르투갈 마누엘린 양식의 걸작입니다.' },
                         { name: '코메르시우 광장', desc: '대서양을 향해 열려 있는 거대한 광장으로, 리스본의 상징적인 장소입니다.' },
                         { name: '신트라', desc: '동화 같은 분위기의 페나 성과 무어인의 성터가 있는 근교 도시입니다.' },
                         { name: '파두 공연', desc: '포르투갈의 정서가 담긴 전통 음악인 파두를 감상할 수 있습니다.' },
                         { name: '아줄레주 박물관', desc: '포르투갈의 독특한 타일 예술인 아줄레주의 역사와 작품을 볼 수 있는 곳입니다.' }
                     ], food: '파스텔 드 나타(에그타르트), 신선한 해산물 요리.' },
-                    { name: '그라나다', icon: '🕌', sights: [
+                    { name: '그라나다(스페인)', icon: '🕌', sights: [
                         { name: '알함브라 궁전', desc: '이슬람 건축의 정수를 보여주는 유네스코 세계문화유산으로, 나스르 궁전, 헤네랄리페 정원 등으로 이루어져 있습니다.' },
                         { name: '알바이신 지구', desc: '그라나다의 구시가지로, 좁은 골목길을 거닐며 아랍 문화의 흔적을 느낄 수 있습니다.' },
                         { name: '산 니콜라스 전망대', desc: '알함브라 궁전과 시에라 네바다 산맥의 멋진 전경을 감상할 수 있는 최고의 장소입니다.' },
                         { name: '그라나다 대성당', desc: '고딕과 르네상스 양식이 혼합된 웅장한 대성당으로, 스페인 역사에서 중요한 의미를 갖습니다.' }
                     ], food: '살모레호(차가운 토마토 수프), 레차소(어린 양고기 요리), 타파스.' },
-                    { name: '세비야', icon: '💃', sights: [
+                    { name: '세비야(스페인)', icon: '💃', sights: [
                         { name: '세비야 대성당', desc: '세계에서 가장 큰 고딕 양식의 대성당이자, 콜럼버스의 묘가 있는 곳으로 유명합니다.' },
                         { name: '알카사르', desc: '이슬람과 스페인 건축 양식이 결합된 왕궁으로, 아름다운 정원이 인상적입니다.' },
                         { name: '스페인 광장', desc: '웅장한 규모와 독특한 건축 양식으로 유명하며, 영화 촬영지로도 사용되었습니다.' },
@@ -267,17 +267,17 @@
             };
             
             data.itineraries['4'] = {
-                title: '일정 4: 바르셀로나 IN - 그라나다 - 세비야 - 리스본 - 포르투 OUT',
+                title: '일정 4: 바르셀로나(스페인) IN - 그라나다(스페인) - 세비야(스페인) - 리스본(포르투갈) - 포르투(포르투갈) OUT',
                 description: '축구 경기 관람을 시작으로, 스페인 남부의 이슬람 문화와 플라멩코의 정열을 경험한 후 포르투갈로 넘어가는 동선입니다. 2월의 따뜻한 날씨를 만끽할 수 있습니다.',
                 highlights: [
                     { text: 'FC 바르셀로나 홈 경기 관람: 여행 4일차 (2월 8일 고정)', dateNote: '출발일: 2월 5일경 (여행 1일차)' }
                 ],
                 days: [
-                    { day: '1-4', city: '바르셀로나', activities: 'Day 1: 인천 출발 후 바르셀로나(BCN) 도착, 숙소 체크인 및 고딕 지구 산책.\nDay 2: 가우디 투어(사그라다 파밀리아, 구엘 공원). 저녁에는 현지 미식 즐기기.\nDay 3: 피카소 미술관 방문, 바르셀로네타 해변에서 휴식.\nDay 4: FC 바르셀로나 홈 경기 직관! 경기 후 활기찬 분위기 만끽.' },
-                    { day: '5-6', city: '그라나다', activities: 'Day 5: 바르셀로나에서 그라나다로 비행기 이동(약 1시간 20분), 숙소 체크인. 오후에 알바이신 지구 탐방 및 산 니콜라스 전망대에서 야경 감상.\nDay 6: 알함브라 궁전 투어(오전). 그라나다 대성당 방문 후 타파스 투어.' },
-                    { day: '7-9', city: '세비야', activities: 'Day 7: 그라나다에서 세비야로 이동(버스/기차, 약 3시간). 숙소 체크인 후 스페인 광장 방문.\nDay 8: 세비야 대성당 및 알카사르 투어. 저녁에는 정통 플라멩코 공연 관람.\nDay 9: 자유시간, 소품 쇼핑 후 리스본으로 이동 준비.' },
-                    { day: '10-12', city: '리스본', activities: 'Day 10: 세비야에서 리스본으로 비행기/버스 이동(비행기 약 1시간, 버스 약 7시간). 숙소 체크인 후 벨렘 지구 투어.\nDay 11: 28번 트램을 타고 알파마 지구 탐방. 코메르시우 광장에서 여유로운 시간.\nDay 12: 근교 신트라(Sintra) 당일치기 여행.' },
-                    { day: '13-14', city: '포르투', activities: 'Day 13: 리스본에서 포르투로 기차 이동(약 3시간). 숙소 체크인 후 도루 강변 산책 및 포트 와인 시음.\nDay 14: 렐루 서점, 상벤투역 방문 후 자유시간 및 기념품 쇼핑. 포르투(OPO) 공항으로 이동하여 출국.' }
+                    { day: '1-4', city: '바르셀로나(스페인)', activities: 'Day 1: 인천 출발 후 바르셀로나(BCN) 도착, 숙소 체크인 및 고딕 지구 산책.\nDay 2: 가우디 투어(사그라다 파밀리아, 구엘 공원). 저녁에는 현지 미식 즐기기.\nDay 3: 피카소 미술관 방문, 바르셀로네타 해변에서 휴식.\nDay 4: FC 바르셀로나 홈 경기 직관! 경기 후 활기찬 분위기 만끽.' },
+                    { day: '5-6', city: '그라나다(스페인)', activities: 'Day 5: 바르셀로나에서 그라나다로 비행기 이동(약 1시간 20분), 숙소 체크인. 오후에 알바이신 지구 탐방 및 산 니콜라스 전망대에서 야경 감상.\nDay 6: 알함브라 궁전 투어(오전). 그라나다 대성당 방문 후 타파스 투어.' },
+                    { day: '7-9', city: '세비야(스페인)', activities: 'Day 7: 그라나다에서 세비야로 이동(버스/기차, 약 3시간). 숙소 체크인 후 스페인 광장 방문.\nDay 8: 세비야 대성당 및 알카사르 투어. 저녁에는 정통 플라멩코 공연 관람.\nDay 9: 자유시간, 소품 쇼핑 후 리스본으로 이동 준비.' },
+                    { day: '10-12', city: '리스본(포르투갈)', activities: 'Day 10: 세비야에서 리스본으로 비행기/버스 이동(비행기 약 1시간, 버스 약 7시간). 숙소 체크인 후 벨렘 지구 투어.\nDay 11: 28번 트램을 타고 알파마 지구 탐방. 코메르시우 광장에서 여유로운 시간.\nDay 12: 근교 신트라(Sintra) 당일치기 여행.' },
+                    { day: '13-14', city: '포르투(포르투갈)', activities: 'Day 13: 리스본에서 포르투로 기차 이동(약 3시간). 숙소 체크인 후 도루 강변 산책 및 포트 와인 시음.\nDay 14: 렐루 서점, 상벤투역 방문 후 자유시간 및 기념품 쇼핑. 포르투(OPO) 공항으로 이동하여 출국.' }
                 ]
             };
             
